--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -49,6 +49,9 @@ jobs:
         echo "EXTRA_PKGS=$EXTRA_PKGS" >> $GITHUB_ENV
         echo "CROSS_COMPILE=$CROSS_COMPILE" >> $GITHUB_ENV
 
+    - name: Compute date string (PST/PDT)
+      run: echo "DATE=$(date +%Y%m%d)" >> $GITHUB_ENV
+
     - name: Install deps for crash-utility building
       run: |
         sudo apt-get update
@@ -84,6 +87,33 @@ jobs:
         sudo cp $GITHUB_WORKSPACE/libtools/include/* /usr/include/
         sudo cp -r $GITHUB_WORKSPACE/libtools/lib/* /usr/lib/
         make CROSS_COMPILE=${{ env.CROSS_COMPILE }}- -j`nproc` warn
+  
+    - name: Compress files
+      run: |
+        ZIP_NAME="crash_${{ env.ARCH }}-${{ env.DATE }}.zip"
+        zip -9 "${ZIP_NAME}" crash
+        echo "ZIP_NAME=${ZIP_NAME}" >> $GITHUB_ENV
+
+    - name: Create Release
+      id: create_release
+      uses: actions/create-release@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}
+      with:
+        release_name: Release crash.${{ env.DATE }}
+        draft: false
+        prerelease: false
+      
+    - name: Upload Release Asset
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: ${{ env.ZIP_NAME }}
+        asset_name: ${{ env.ZIP_NAME }}
+        asset_content_type: application/zip
+
     - name: Checking and Clean up
       run: |
         echo "Run command: file crash ..."
