--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -48,6 +48,7 @@ jobs:
 
         echo "EXTRA_PKGS=$EXTRA_PKGS" >> $GITHUB_ENV
         echo "CROSS_COMPILE=$CROSS_COMPILE" >> $GITHUB_ENV
+        echo "ARCH=$ARCH >> $GITHUB_ENV
 
     - name: Compute date string (PST/PDT)
       run: echo "DATE=$(date +%Y%m%d)" >> $GITHUB_ENV
@@ -100,6 +101,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}
       with:
+        tag_name: ${{ env.tag }}
         release_name: Release crash.${{ env.DATE }}
         draft: false
         prerelease: false
