--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -101,7 +101,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}
       with:
-        tag_name: ${{ env.tag }}
+        tag_name: crash.${{ env.DATE }}
         release_name: Release crash.${{ env.DATE }}
         draft: false
         prerelease: false
