删除其他平台的编译
Signed-off-by: miniLQ <liuqi20328@gmail.com>

--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -12,14 +12,14 @@ jobs:
       matrix:
         arch:
         - x86_64
-        - aarch64
-        - s390x
-        - powerpc64
-        - x86
-        - riscv64
-        - mips
-        - alpha
-        - sparc64
+ #       - aarch64
+ #       - s390x
+ #       - powerpc64
+ #       - x86
+ #       - riscv64
+ #       - mips
+ #       - alpha
+ #       - sparc64
 
     steps:
     - name: Checkout
